fix(cards): cards with different names have too much whitespace

--- a/_src/assets/css/series.css
+++ b/_src/assets/css/series.css
@@ -26,6 +26,7 @@
 }
 
 .card-card {
+  align-self: start;
   background-color: var(--surface-1);
   border: 1px solid var(--choco-1);
   border-radius: var(--border-size-1);
